# metro-news-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py  setup.cfg
.github/: linter.yml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: c298a8697cd3_initial_migration.py  d065859698b1_migration.py
api/: app.py  db_adapter.py  models.py  schemas.py  utils.py
db/: __init__.py  database.py  db_models.py  sql_queries.py
news_parser/: __init__.py  parser.py
tests/: conftest.py  test_app.py  test_utils.py
