[tool.poetry]
name = "news api"
version = "0.1.0"
description = "API for news info"
authors = ["Roman Poliakov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.5"
pydantic-settings = "^2.0.3"
loguru = "^0.7.2"
httpx = "^0.25.0"
SQLAlchemy = "^2.0.20"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
